--- a/web/reportes/reporteUtilidades.jrxml
+++ b/web/reportes/reporteUtilidades.jrxml
@@ -26,11 +26,14 @@ on Producto.idProducto = detalleVenta.idProducto inner join Venta on detalleVent
 	<field name="valorCompraProducto" class="java.lang.Float">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<variable name="totalVenta" class="java.math.BigDecimal" calculation="Sum">
+	<variable name="totalVenta" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{valorVentaProducto}]]></variableExpression>
 	</variable>
-	<variable name="totalCompra" class="java.math.BigDecimal" calculation="Sum">
+	<variable name="totalCompra" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{valorCompraProducto}]]></variableExpression>
+	</variable>
+	<variable name="utilidad" class="java.lang.Double">
+		<variableExpression><![CDATA[$V{totalVenta}-$V{totalCompra}]]></variableExpression>
 	</variable>
 	<background>
 		<band splitType="Stretch"/>
@@ -107,17 +110,21 @@ on Producto.idProducto = detalleVenta.idProducto inner join Venta on detalleVent
 				<reportElement x="292" y="3" width="100" height="20" uuid="cd432de5-14a2-4b97-9940-f942d3956b4f"/>
 				<text><![CDATA[total venta]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="411" y="3" width="100" height="20" uuid="dc5d8bac-4faa-40fd-9cf1-54a913361cff"/>
-				<textFieldExpression><![CDATA[$V{totalVenta}]]></textFieldExpression>
-			</textField>
 			<staticText>
 				<reportElement x="292" y="23" width="100" height="20" uuid="0338faf4-f5d5-47c6-8d76-de89244653f9"/>
 				<text><![CDATA[total compra]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="415" y="20" width="100" height="20" uuid="5b831eca-14ff-4c03-88cc-f990342974ab"/>
+				<reportElement x="404" y="5" width="100" height="20" uuid="775a30ce-2da2-452c-9e1d-a7e2cd36b190"/>
+				<textFieldExpression><![CDATA[$V{totalVenta}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="406" y="21" width="100" height="20" uuid="ce1b42a6-c77d-40b9-ba49-832e4352b72e"/>
 				<textFieldExpression><![CDATA[$V{totalCompra}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="408" y="37" width="100" height="20" uuid="b81b8ff3-8e7d-4f87-be45-ee84da3e3081"/>
+				<textFieldExpression><![CDATA[$V{utilidad}]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
