--- a/web/reportes/reporteUtilidades.jrxml
+++ b/web/reportes/reporteUtilidades.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="ed150658-2dd9-4dfe-9a47-8996109db19e">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="64"/>
 	<parameter name="Fechainicial" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -10,7 +10,7 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select  GreenAppsDemo.Producto.codigoProducto,descripcionProducto,GreenAppsDemo.detalleVenta.valorVentaProducto,GreenAppsDemo.Producto.valorCompraProducto  from Producto inner join detalleVenta
+		<![CDATA[select  GreenAppsDemo.Producto.codigoProducto,descripcionProducto,GreenAppsDemo.detalleVenta.*,GreenAppsDemo.Producto.valorCompraProducto  from Producto inner join detalleVenta
 on Producto.idProducto = detalleVenta.idProducto inner join Venta on detalleVenta.idVenta=Venta.idVenta 
  where fechaVenta between  $P{Fechainicial} and $P{Fechafinal}]]>
 	</queryString>
@@ -20,10 +20,31 @@ on Producto.idProducto = detalleVenta.idProducto inner join Venta on detalleVent
 	<field name="descripcionProducto" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="valorVentaProducto" class="java.lang.Float">
+	<field name="iddetalleVenta" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="valorCompraProducto" class="java.lang.Float">
+	<field name="idVenta" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="idProducto" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="nombreProducto" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="valorVentaProducto" class="java.lang.Double">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="IVA" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="unidadesVendidas" class="java.lang.Double">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="totaldetalleVenta" class="java.lang.Float">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="valorCompraProducto" class="java.lang.Double">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<variable name="totalVenta" class="java.lang.Double" calculation="Sum">
@@ -36,7 +57,7 @@ on Producto.idProducto = detalleVenta.idProducto inner join Venta on detalleVent
 		<variableExpression><![CDATA[$V{totalVenta}-$V{totalCompra}]]></variableExpression>
 	</variable>
 	<variable name="utilidad_unitaria" class="java.lang.Double">
-		<variableExpression><![CDATA[$F{valorCompraProducto}-$F{valorVentaProducto}]]></variableExpression>
+		<variableExpression><![CDATA[($F{valorVentaProducto}-$F{valorCompraProducto})*$F{unidadesVendidas}]]></variableExpression>
 	</variable>
 	<background>
 		<band splitType="Stretch"/>
@@ -105,6 +126,10 @@ on Producto.idProducto = detalleVenta.idProducto inner join Venta on detalleVent
 			<textField>
 				<reportElement x="218" y="0" width="100" height="20" uuid="00c414cf-d15b-438d-9b5b-55ef418af886"/>
 				<textFieldExpression><![CDATA[$F{valorVentaProducto}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="476" y="2" width="100" height="20" uuid="15dd6a15-6474-40b2-9136-90a85184ac01"/>
+				<textFieldExpression><![CDATA[$V{utilidad_unitaria}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
