--- a/web/template/HomeTemplate.xhtml
+++ b/web/template/HomeTemplate.xhtml
@@ -54,6 +54,7 @@
                 <p:submenu label="Ventas" icon="ui-icon-gear">
                     <p:menuitem value="Venta" outcome="/views/Venta/Venta" icon="ui-icon-refresh" />
                     <p:menuitem value="Facturas" outcome="/views/Venta/Fac-Ventas" icon="ui-icon-refresh" />
+                    <p:menuitem value="Utilidades" outcome="/views/Venta/Utilidades" icon="ui-icon-refresh" />
                 </p:submenu>
 
                 <p:submenu label="Personas" icon="ui-icon-gear">
