modificacion IVA en Producto & bd

--- a/web/views/Producto/Producto.xhtml
+++ b/web/views/Producto/Producto.xhtml
@@ -94,8 +94,8 @@
                             <p:outputLabel value="IVA"/>
                             <p:selectOneMenu value="#{productoBean.producto.iva}" style="text-align: center">
                                 <f:selectItem itemLabel="Seleccione" itemValue="#{null}"/>
-                                <f:selectItem itemLabel="SI" itemValue="SI"/>
-                                <f:selectItem itemLabel="NO" itemValue="NO"/>
+                                <f:selectItem itemLabel="Si" itemValue="true"/>
+                                <f:selectItem itemLabel="No" itemValue="false"/>
                             </p:selectOneMenu>
                             <p:outputLabel value="Categoria"/>
                             <p:selectOneMenu value="#{productoBean.producto.idCategoria}" style="width: 1001px">
@@ -137,8 +137,8 @@
                             <p:outputLabel value="IVA"/>
                             <p:selectOneMenu value="#{productoBean.producto.iva}">
                                 <f:selectItem itemLabel="Seleccione" itemValue="#{null}"/>
-                                <f:selectItem itemLabel="SI" itemValue="SI"/>
-                                <f:selectItem itemLabel="NO" itemValue="NO"/>
+                                <f:selectItem itemLabel="Si" itemValue="true"/>
+                                <f:selectItem itemLabel="No" itemValue="false"/>
                             </p:selectOneMenu>
                             <p:outputLabel value="Categoria"/>
                             <p:selectOneMenu value="#{productoBean.producto.idCategoria}" style="width: 1008px">
