--- a/web/views/Producto/Producto.xhtml
+++ b/web/views/Producto/Producto.xhtml
@@ -51,7 +51,7 @@
                             <h:outputText value="#{pro.stockMinimo}"/> Unidades
                         </p:column>
                         <p:column headerText="IVA" style="text-align:center">
-                            <h:outputText value="#{pro.iva}"/>
+                            <h:outputText value="#{pro.iva eq '0' ? 'No' : 'Si'}"/>
                         </p:column>
                         <p:column headerText="Categoria" style="text-align:center">
                             <h:outputText value="#{productoBean.getmostrarCategoria(pro.idCategoria)}"/>
