--- a/web/views/Cotizacion/Cotizacion.xhtml
+++ b/web/views/Cotizacion/Cotizacion.xhtml
@@ -85,7 +85,7 @@
                                 </p:cellEditor>
                             </p:column>
                             <p:column headerText="IVA">
-                                <h:outputText value="#{pro.iva}"/>
+                                <h:outputText value="#{pro.iva eq '0' ? 'No' : 'Si'}"/>
                             </p:column>
                             <p:column headerText="Unidades Cotizadas">
                                 <p:cellEditor>
@@ -184,7 +184,7 @@
                                 </p:outputLabel>
                             </p:column>
                             <p:column headerText="IVA" style="text-align:center">
-                                <h:outputText value="#{pro.iva}"/>
+                                <h:outputText value="#{pro.iva eq '0' ? 'No' : 'Si'}"/>
                             </p:column>
                             <p:column headerText="Categoría" style="text-align:center">
                                 <h:outputText value="#{productoBean.getmostrarCategoria(pro.idCategoria)}"/>
