--- a/web/reportes/reporteFacturaVenta.jrxml
+++ b/web/reportes/reporteFacturaVenta.jrxml
@@ -59,8 +59,14 @@ WHERE  dv.idVenta=$P{idVenta}]]>
 	<field name="totalDetalleVenta" class="java.lang.Float">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<variable name="totalVenta" class="java.math.BigDecimal" calculation="Sum">
+	<variable name="subTotal" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{totalDetalleVenta}]]></variableExpression>
+	</variable>
+	<variable name="totalIva" class="java.lang.Double">
+		<variableExpression><![CDATA[$V{subTotal}*0.19]]></variableExpression>
+	</variable>
+	<variable name="totalVenta" class="java.lang.Number">
+		<variableExpression><![CDATA[$V{subTotal}+$V{totalIva}]]></variableExpression>
 	</variable>
 	<background>
 		<band splitType="Stretch"/>
@@ -75,7 +81,7 @@ WHERE  dv.idVenta=$P{idVenta}]]>
 				<text><![CDATA[REGIMEN SIMPLIFICADO]]></text>
 			</staticText>
 			<image>
-				<reportElement x="62" y="7" width="141" height="102" uuid="7e449e91-610f-47f8-ba49-4a8c5420947d"/>
+				<reportElement x="63" y="1" width="140" height="114" uuid="7e449e91-610f-47f8-ba49-4a8c5420947d"/>
 				<imageExpression><![CDATA["/Users/csrsto/Downloads/GreenApps/reportesdeutilidades/web/imgs/GreenApps.jpg"]]></imageExpression>
 			</image>
 		</band>
@@ -177,8 +183,8 @@ WHERE  dv.idVenta=$P{idVenta}]]>
 				<text><![CDATA[Valor Unitario]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="96" y="2" width="89" height="19" uuid="dedec60a-188f-45a9-9782-a5cccf432254"/>
-				<textElement textAlignment="Justified" verticalAlignment="Middle">
+				<reportElement x="91" y="2" width="34" height="19" uuid="dedec60a-188f-45a9-9782-a5cccf432254"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{identificacionPersona}]]></textFieldExpression>
@@ -186,28 +192,28 @@ WHERE  dv.idVenta=$P{idVenta}]]>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="30" splitType="Stretch">
+		<band height="29" splitType="Stretch">
 			<textField>
-				<reportElement x="24" y="2" width="21" height="13" uuid="d109b7d7-5ce4-4686-8620-badb16aa16c9"/>
+				<reportElement x="24" y="5" width="21" height="13" uuid="d109b7d7-5ce4-4686-8620-badb16aa16c9"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{unidadesVendidas}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="53" y="2" width="87" height="27" uuid="e623d34d-311e-4f75-a653-bb27c89a55be"/>
+				<reportElement x="53" y="-2" width="87" height="28" uuid="e623d34d-311e-4f75-a653-bb27c89a55be"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombreProducto}]]></textFieldExpression>
 			</textField>
 			<textField pattern="$ #,##0">
-				<reportElement x="146" y="2" width="53" height="13" uuid="33ea9f19-f91b-4c91-aaff-7865e0e53505"/>
+				<reportElement x="146" y="6" width="53" height="13" uuid="33ea9f19-f91b-4c91-aaff-7865e0e53505"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{valorVentaProducto}]]></textFieldExpression>
 			</textField>
 			<textField pattern="$ #,##0">
-				<reportElement x="210" y="2" width="55" height="15" uuid="0e9444d5-f3f9-4278-a600-6b1a0979030b"/>
+				<reportElement x="210" y="5" width="55" height="15" uuid="0e9444d5-f3f9-4278-a600-6b1a0979030b"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7"/>
 				</textElement>
@@ -216,31 +222,58 @@ WHERE  dv.idVenta=$P{idVenta}]]>
 		</band>
 	</detail>
 	<summary>
-		<band height="104" splitType="Stretch">
+		<band height="127" splitType="Stretch">
 			<rectangle radius="10">
-				<reportElement x="79" y="2" width="168" height="14" uuid="eea23eba-ab34-4a9e-8874-8a80c25edf3e"/>
+				<reportElement x="111" y="-1" width="144" height="46" uuid="04dd6707-a4ab-40d5-b9c2-8a4a79ebfa8c"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="77" y="2" width="83" height="15" uuid="750d8049-79af-4ce1-9f1f-e25e560f2b4d"/>
+				<reportElement x="108" y="-2" width="83" height="15" uuid="750d8049-79af-4ce1-9f1f-e25e560f2b4d"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
-				<text><![CDATA[Total Venta:]]></text>
+				<text><![CDATA[Subtotal:]]></text>
 			</staticText>
-			<line>
-				<reportElement x="7" y="20" width="252" height="1" uuid="4a5b0f6b-f3d1-4d1b-bd8f-28e022e4a1d3"/>
-			</line>
 			<staticText>
-				<reportElement x="19" y="26" width="236" height="76" uuid="b708b58a-6072-49a3-8fd9-1c754871260b"/>
+				<reportElement x="18" y="50" width="236" height="76" uuid="b708b58a-6072-49a3-8fd9-1c754871260b"/>
 				<textElement textAlignment="Center">
 					<font fontName="SansSerif" size="8"/>
 				</textElement>
 				<text><![CDATA[Es obligatorio presentar esta Factura Original para efectos de reclamos y garantías de Accesorios y Repuestos. Pasados 30 días no se aceptan devoluciones ni productos en mal estado o incompletos. La garantía en llantas es de tres meses por defectos de fabricación, no se aceptan llantas parchadas o con daños producidos por terceros. La garantía en baterías es de dos meses por descargas o defectos de fabricación. Partes electricas no tienen garantía. ]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="108" y="14" width="83" height="15" uuid="943671bd-9fc6-4cc2-b8dd-a13534cd221d"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Iva:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="108" y="30" width="83" height="15" uuid="9eb86d09-75c1-4fb5-8a2a-141dc6c6fe84"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total Venta:]]></text>
+			</staticText>
 			<textField pattern="$ #,##0">
-				<reportElement x="154" y="1" width="87" height="15" uuid="95161696-7b31-432a-8870-aa3373fb9cac"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<reportElement x="165" y="30" width="72" height="15" uuid="e0cff0c5-954a-4b94-816e-cd6b19edd01c"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$V{totalVenta}]]></textFieldExpression>
+			</textField>
+			<textField pattern="$ #,##0">
+				<reportElement x="165" y="-2" width="72" height="15" uuid="55a5a775-a66d-47ab-82df-45f1de55d6c5"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{subTotal}]]></textFieldExpression>
+			</textField>
+			<textField pattern="$ #,##0">
+				<reportElement x="165" y="14" width="72" height="15" uuid="5394d952-e430-4cc0-979d-b317a058cb2e"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{totalIva}]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
