--- a/web/reportes/reporteFacturaCompra.jrxml
+++ b/web/reportes/reporteFacturaCompra.jrxml
@@ -64,8 +64,8 @@
 				<text><![CDATA[REGIMEN SIMPLIFICADO]]></text>
 			</staticText>
 			<image>
-				<reportElement x="75" y="8" width="121" height="103" uuid="8d0a3b32-9cc3-4967-9806-6e7bb8b49f1e"/>
-				<imageExpression><![CDATA["/Users/csrsto/Documents/Apps/GreenApps-Demo/web/imgs/GreenApps.png"]]></imageExpression>
+				<reportElement x="44" y="17" width="203" height="89" uuid="b6a68507-0450-45f7-9669-a48ed07b52c3"/>
+				<imageExpression><![CDATA["/home/harold/Escritorio/no tocar/marzo/reportesdeutilidades/web/imgs/GreenApps.jpg"]]></imageExpression>
 			</image>
 		</band>
 	</title>
